# BAMT

./: .codecov.yml  .gitignore  .pep8speaks.yml  .readthedocs.yml  404.html  Bank_synthetic.ipynb  Builders.py  Example_BN_for_VK.ipynb  Example_synth_data.ipynb  Input_data_analysis.ipynb  LICENCE  Metrics.py  Networks.py  Nodes.py  Preprocessors.py  README.md  README.rst  Readme.md  SECURITY.md  log.py  logging.conf  mi_entropy_gauss.py  mkdocs.yml  pyproject.toml  readme.md  redef_HC.py  redef_info_scores.py  requirements.txt  test_gmm.ipynb  usage_example_tmp.py
Tests/: ConditionalGaussiansTest.py  ContinousTest1.py  ContinousTestPL.py  DicreteTest.py  DiscreteTestHack.py  DiscreteTestv2.py  HybridTest1.py  MetricsTest.py  ParamsTest.py  PreprocessorTest.py  VerticesTest.py  classifiersPickle.py  preprocessor_test.py
Utils/: GraphUtils.py
bamt/: Builders.py  Networks.py  Nodes.py  Preprocessors.py  ScoringFunctions.py  builders.py  config.py  log.py  logging.conf  mi_entropy_gauss.py  networks.py  nodes.py  preprocessors.py  redef_HC.py  redef_info_scores.py  test_file.py
bayesian/: calculate_accuracy.py  metrics.py  redef_HC.py  redef_info_scores.py  sampling.py  save_bn.py  structure_score.py  subsample.py  train_bn.py
block_learning/: connect_BNs.py  partial_bn_train.py  quality_metrics.py  read_bn.py  sampling.py  save_bn.py  train_bn.py
core/: core_utils.py
data/: alarm.csv  ecoli70.csv  friends_age_sex.csv  hackathon_processed.csv  hailfinder_structure.csv  healthcare.csv  healthcare_small.csv  mehra.csv  mehra_small.csv  modules_vk_discrete.csv  sangiovese.csv  sangiovese_small.csv  socio.csv  test_mehra.csv  test_vk_data.csv  train_mehra.csv  train_vk_data.csv
data_process/: preprocessing.py
example/: Example_synth_data.ipynb  Mixed_learning_BN.ipynb  example_synth_data.py
experiments/: BigBN.ipynb  BigBNpf.ipynb  EAI_exp.ipynb  GPN_analysis.ipynb  GPN_excel_parsing.ipynb  GPN_widget.ipynb  Param_scheme_figs.ipynb  Petr_RF3.ipynb  VK_synth_data.ipynb  analogs_analysis.ipynb  beta05.txt  beta08 2d.txt  beta08.txt  beta099.txt  debug.py  else.py  evo_exp_geo.ipynb  expert_knowledge.ipynb  fedot_bn_example.py  file1_fact.csv  file3_fact.csv  file4_fact.csv  file5_fact.csv  file6_fact.csv  gmm_experiments.ipynb  gmm_experiments_geo.ipynb  gmm_structure_learning.ipynb  gmm_vis.ipynb  gmm_with_olr_analysis.ipynb  hailfinder_solution.csv  logit acc geo.ipynb  logit.ipynb  magic-niab-true.txt  mdpi.ipynb  pathfinder.csv  pathfindertruen.csv  rmse_distance_analysis.ipynb  socio_sample.csv  sparsebnsolutionedgelist.csv  synth_data_for_gmm.ipynb  (+4 more)
graph/: precision_recall.py  ysc_graph_healthcare.ipynb  ysc_graph_mehra.ipynb  ysc_graph_sangiovese.ipynb
libpgm/: dictionary.py  discrete.py  discretebayesiannetwork.py  dyndiscbayesiannetwork.py  graphskeleton.py  hybayesiannetwork.py  lg.py  lgandd.py  lgbayesiannetwork.py  nodedata.py  orderedskeleton.py  pgmlearner.py  sampleaggregator.py  tablecpdfactorization.py
models/: direct_model.json  module1.json  module_1_2.json  module_1_2_3.json
other_requirements/: readthedocs.txt
preprocess/: discretization.py  graph.py  numpy_pandas.py
pyBN/: __init__.py
tests/: BigbraveBNTest.py  ConditionalGaussiansTest.py  ContinousTest1.py  ContinousTestPL.py  DiscreteTestHack.py  DiscreteTestv2.py  HybridTest1.py  LoadBN.py  MainTest.py  MetricsTest.py  NetworksTest.py  ParamsTest.py  PreprocessorTest.py  README.md  SamplingDisc.py  SaveBN.py  SetParametersTest.py  SetStructureTest.py  VerticesTest.py  classifiersPickle.py  main.py  sendingClassifiersLogit.py  sendingRegressors.py  test_Integrational.py  test_builders.py  test_graph_analyzer.py  (+5 more)
(+467 files in other folders)
