[tool.poetry]
name = "BAMT"
version = "1.1.44"
description = "data modeling and analysis tool based on Bayesian networks"
authors = ["Roman Netrogolov <romius2001@gmail.com>",
    "Irina Deeva <iriny.deeva@gmail.com>",
    "Karine Shakhkyan <kshahkyan@yandex.ru>",
    "Nikita Kovalev Yasen <Nikitoskova123@gmail.com>",
    "Anna Bubnova <banuba313@gmail.com>",
    "Yury Kaminsky <jkaminski@niuitmo.ru>"]

license = "BSD-3-Clause"
readme = "readme.rst"
repository = "https://github.com/ITMO-NSS-team/BAMT"

classifiers = ["Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics"]

packages = [
    { include = "bamt" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
setuptools = "65.6.3"
numpy = ">=1.24.2"
matplotlib = "3.6.2"
pandas = "2.0.3"
gmr = "1.6.2"
scikit-learn = "^1.2.0"
scipy = "^1.8.0"
pyvis = ">=0.2.1"
missingno = "^0.5.1"
pgmpy = "0.1.20"
thegolem = ">=0.3.1"
xgboost = ">=1.7.6"
catboost = ">=1.0.6"
lightgbm = ">=3.3.5"


[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
