[tool.poetry]
name = "BAMT"
version = "2.0.0"
description = "data modeling and analysis tool based on Bayesian networks"
authors = ["Roman Netrogolov <romius2001@gmail.com>",
    "Irina Deeva <iriny.deeva@gmail.com>",
    "Karine Shakhkyan <kshahkyan@yandex.ru>",
    "Nikita Kovalev Yasen <Nikitoskova123@gmail.com>",
    "Anna Bubnova <banuba313@gmail.com>",
    "Yury Kaminsky <jkaminski@niuitmo.ru>"]

license = "BSD-3-Clause"
readme = "readme.rst"
repository = "https://github.com/ITMO-NSS-team/BAMT"

classifiers = ["Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics"]

packages = [
    { include = "bamt" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
scipy = "^1.14.0"
xgboost = "^2.0.0"
catboost = "^2.0.0"
matplotlib = "^3.9.0"
pyvis = "^0.2.0"
thegolem = "^0.4.0"
rich = "^13.0.0"
gmr = "^1.6.2"
pgmpy = "^0.1.25"
lightgbm = {version = ">=3.3.5", optional = true }

[tool.poetry.extras]
composite_extras = ["lightgbm"]


[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
